dev/main.scss
@import "bourbon/bourbon";

$aside-bg: #434752;
$aside-width: 275px;

$content-bg: #FBFCFD;

$positive: #65be71;
$font: 'Muli', sans-serif;
@font-face {
    font-family: 'Muli';
    font-weight: 300;
    font-style: normal;
    src: url('/fonts/Muli-Light.ttf');
}

@font-face {
    font-family: 'Muli';
    font-weight: 400;
    font-style: normal;
    src: url('/fonts/Muli-Regular.ttf');
}

@font-face {
    font-family: 'Muli';
    font-weight: 300;
    font-style: italic;
    src: url('/fonts/Muli-LightItalic.ttf');
}

@font-face {
    font-family: 'Muli';
    font-weight: 400;
    font-style: italic;
    src: url('/fonts/Muli-Italic.ttf');
}

html, body  {
    font-family: $font;
    font-weight: 300;
    margin: 0 0 0 0;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    height: 100%;
    background-color: $content-bg;
    @include user-select(none);
}

textarea:focus, input:focus{
    outline: 0;
}

#wrapper {
    width: 100%;
    height: 100%;
    overflow: hidden;
    display: inline-block;
}

#aside {
    float: left;
    position: fixed;
    width: $aside-width;
    height: 100%;
    background-color: $aside-bg;
    overflow-y: auto;
    overflow-x: hidden;
    &::-webkit-scrollbar {
        visibility: hidden;
        width: 10px;
        display: none;
    }
}

#content {
    float: left;
    margin-left: $aside-width/2;
    width: 100%;
    height: 100%;
    @include display(flex);
    @include align-items(center);
    @include justify-content(center);
}

#search {
    position: fixed;
    @include display(flex);
    @include align-items(center);
    @include justify-content(center);
    margin-top: 0;
    width: $aside-width;
    height: 70px;
    border-bottom: 1px #575c6a solid;
    background-color: $aside-bg;
    input {
        background-color: #696c74;
        color: white;
        font-family: $font;
        font-size: 14px;
        border: none;
        width: 80%;
        height: 30px;
        border-radius: 3px;
        padding-left: 10px;
        padding-right: 10px;
    }
    #ask {
        border: none;
        background-color: transparent;
        color: white;
        font-family: $font;
        font-size: 30px;
        margin-left: 15px;
        cursor: pointer;
    }
}

#queueWrapper {
    padding-top: 80px;
}

#queue {
    color: white;
    width: ($aside-width);
    margin-left: 0;
    border-collapse: collapse;
    tr {
        height: 75px;
        cursor: pointer;
        &:hover {
            background-color: #4e525f;
        }
        td {
            padding-left: 5px;
            padding-right: 5px;
            text-align: center;
            border: 0;
        }
        .hacker{
            padding-left: 5px;
            padding-right: 5px;
            text-align: left;
            border: 0;
        }
        .hImgWrapper {
            width: 75px;
            border: 0;
        }
    }
}

.hName {
    font-weight: 400;
}

.hLocation {
    font-weight: 300;
    font-size: 12px;
}

.hImg {
    width: 50px;
    height: 50px;
    border-radius: 100%;
    border: #6b6c75 3px solid;
}

#add_form {
    width: 50%;
    margin: 0 auto;
    text-align: center;
    input {
        font-family: $font;
        font-size: 24px;
        border: none;
        background-color: transparent;
        border-bottom: 2px black solid;
        height: 45px;
        width: 60%;
        min-width: 300px;
        margin-top: 15px;
        margin-bottom: 15px;
        padding-left: 10px;
        padding-right: 10px;
    }
    button {
        font-family: $font;
        font-size: 18px;
        border: none;
        height: 50px;
        width: 150px;
        margin: 10px 10px 10px 10px;
        cursor: pointer;
    }
}

.positive_button {
    background-color: $positive;
    color: white;
    font-weight: bold;
}

